--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.laercio.organizze">
 
     <application
@@ -10,7 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.CadastroUsuario.CadastroActivity"></activity>
+        <activity
+            android:name=".ui.login.PrincipalActivity"
+            android:label="@string/title_activity_principal"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity android:name=".ui.CadastroUsuario.CadastroActivity" />
         <activity android:name=".ui.login.LoginActivity" />
         <activity
             android:name=".ui.main.MainActivity"
