--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".ui.Despesas.DespesasActivity"
+            android:theme="@style/despesaTheme"></activity>
+        <activity android:name=".ui.Receitas.ReceitasActivity"
+            android:theme="@style/receitaTheme"/>
         <activity
-            android:name=".ui.login.PrincipalActivity"
+            android:name=".ui.Principal.PrincipalActivity"
             android:label="@string/title_activity_principal"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".ui.CadastroUsuario.CadastroActivity" />
         <activity android:name=".ui.login.LoginActivity" />
         <activity
