--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,12 @@ dependencies {
 
     //FloatActionMenu
     implementation 'com.github.clans:fab:1.6.4'
+
+    //CalendarView
+    implementation 'com.github.prolificinteractive:material-calendarview:1.4.3'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+
+    implementation 'com.android.support:cardview-v7:28.0.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
